# caw

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile.am  README.md  configure.ac
examples/: examples.cfg  examples.md  proc_dict.cfg
src/: CMakeLists.txt
src/caw/: CMakeLists.txt  cawUi.cpp  cawUi.h  cawUiDecl.h  caw_0.cfg  main.cfg  main.cpp
src/caw/cfg/: io.cfg  main.cfg
src/caw/cult/: cult_caw.cfg  cult_caw_perf.cfg  io.cfg
src/caw/html/: index.html  ui.cfg
src/caw/html/css/: caw.css  ui.css
src/caw/html/js/: ui.js
src/caw/perf/: perf_caw.cfg  preset_meas_loc.txt
src/caw/preset/: preset_caw.cfg
src/caw/test/: test.cfg
src/caw/ui/: ui_caw.cfg
src/proj/: main.cfg  main.cpp
